--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/papermod"]
-	path = themes/papermod
-	url = https://github.com/adityatelange/hugo-PaperMod
+[submodule "themes/pehtheme-hugo"]
+	path = themes/pehtheme-hugo
+	url = https://github.com/fauzanmy/pehtheme-hugo
