Fix Github action deloy script to specify production environment for hugo

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,7 @@ jobs:
         
     - name: Build Hugo Site
       run: |
-        hugo --minify
+        hugo --environment production --minify
         
     - name: Import DFX Identity
       run: |
