Add About page with author info

--- a/hugo.toml
+++ b/hugo.toml
@@ -25,3 +25,8 @@ theme = "diary"
 	[markup.goldmark]
 		[markup.goldmark.renderer]
 			unsafe = true
+
+[[menu.main]]
+	name = "About"
+	url = "/about/"
+	weight = 1
