--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,13 @@ jobs:
         
     - name: Build Hugo Site
       run: |
-        hugo --minify
+        # Set environment for production build
+        export HUGO_ENV=production
+        export HUGO_ENVIRONMENT=production
+        # Clean any existing build
+        rm -rf public/
+        # Build for production with proper settings - force production mode
+        HUGO_ENV=production hugo --minify --environment production --disableLiveReload --gc --buildDrafts=false --buildFuture=false
         
     - name: Import DFX Identity
       run: |
