--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,16 @@ jobs:
         # Verify dfx installation
         $HOME/.local/share/dfx/versions/0.24.3/dfx --version
         
+    - name: Debug Hugo Environment
+      run: |
+        echo "=== Debugging Hugo Environment ==="
+        echo "Current directory: $(pwd)"
+        echo "Theme directory exists: $(ls -la themes/diary 2>/dev/null && echo "YES" || echo "NO")"
+        echo "Theme layouts exist: $(ls -la themes/diary/layouts 2>/dev/null && echo "YES" || echo "NO")"
+        echo "Hugo version: $(hugo version)"
+        echo "Hugo config:"
+        cat hugo.toml
+        
     - name: Build Hugo Site
       run: |
         # Set environment for production build
@@ -69,7 +79,14 @@ jobs:
         # Clean any existing build
         rm -rf public/
         # Build for production with proper settings
-        HUGO_ENV=production hugo --minify --environment production --gc --buildDrafts=false --buildFuture=false
+        echo "=== Building Hugo Site ==="
+        HUGO_ENV=production hugo --minify --environment production --gc --buildDrafts=false --buildFuture=false --verbose
+        
+        echo "=== Checking Build Output ==="
+        echo "Public directory contents:"
+        ls -la public/
+        echo "Index.html first 10 lines:"
+        head -10 public/index.html
         
     - name: Import DFX Identity
       run: |
