--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,7 +86,11 @@ jobs:
         echo "Public directory contents:"
         ls -la public/
         echo "Index.html first 10 lines:"
-        head -10 public/index.html
+        head -10 public/index.html || echo "index.html not found!"
+        echo "=== Hugo Debug Info ==="
+        hugo --help | head -5
+        echo "Theme path:"
+        hugo config | grep theme || echo "No theme config found"
         
     - name: Import DFX Identity
       run: |
