--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,7 @@ languageCode = 'en-us'
 title = 'The Sunday Blender'
 canonifyURLs = true
 theme = "diary"
+googleAnalytics = "G-9WB2PSGYTC" 
 
 [permalinks]
 	posts = "/p/:slug/"
